Annotation cleanup